[Localization] Fix poorly done strings
Icty, why did the Subscribers and Views strings
have dots at the end of them?

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,9 +1,26 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
-	"Access Denined": "Access Denined",
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+
+	"No reset data.": "No reset data.",
+
+	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
+
+	"Subscribe": "Subscribe",
+	"Unsubscribe": "Unsubscribe",
 
 	"No POST data.": "No POST data.",
+
+	"do not reset": "do not reset",
+	"Passwords aren't identical.": "Passwords aren't identical.",
+
+	"Access Denined": "Access Denined",
+
+	"Please enter your username! ": "Please enter your username! ",
+	"Please enter your password! ": "Please enter your password! ",
+	"Incorrect username or password.": "Incorrect username or password.",
 
 	"Blank username. ": "Blank username. ",
 	"Blank email. ": "Blank email. ",
@@ -12,83 +29,50 @@
 	"Username has already been taken. ": "Username has already been taken. ",
 	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "Username contains invalid characters (Only alphanumeric and underscore allowed). ",
 	"Email isn't valid. ": "Email isn't valid. ",
-	"Please enter your username! ": "Please enter your username! ",
-	"Please enter your password! ": "Please enter your password! ",
-	"Incorrect username or password.": "Incorrect username or password.",
-
 	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
 
-	"No reset data.": "No reset data.",
+	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
+	"Published on %s": "Published on %s",
 
-	"do not reset": "do not reset",
-	"Passwords aren't identical.": "Passwords aren't identical.",
+	"No uploaded videos.": "No uploaded videos.",
 
-	"Subscribe": "Subscribe",
-	"Unsubscribe": "Unsubscribe",
+	"views": "views",
 
-	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
+	"Browse": "Browse",
+	"Channels": "Channels",
+	"No users.": "No users.",
 
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+	"Checkmarked": "Checkmarked",
+	"Your profile settings were successfully updated.": "Your profile settings were successfully updated.",
+	"Uploaded by %s": "Uploaded by %s",
+	"There are no videos uploaded by %s.": "There are no videos uploaded by %s.",
+	"About %s": "About %s",
+	"Last seen": "Last seen",
+	"Joined": "Joined",
+	"s": "s",
+	"Subscriber%s": "Subscriber%s",
+	"Administrator Actions": "Administrator Actions",
+	"Generate password reset for %s": "Generate password reset for %s",
+
+	"Register": "Register",
+	"E-mail": "E-mail",
+	"Username": "Username",
+	"Password": "Password",
+	"Password (Again)": "Password (Again)",
+	"Back": "Back",
+	"By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.": "By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.",
+	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
+	"By squareBracket contributors": "By squareBracket contributors",
+
+	"Videos from subscriptions": "Videos from subscriptions",
+	"Videos": "Videos",
+	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
 
 	"About": "About",
 	"About squareBracket": "About squareBracket",
 	"Gamerappa squareBracket": "Gamerappa squareBracket",
 	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
-	"By squareBracket contributors": "By squareBracket contributors",
 	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
-
-	"Admin": "Admin",
-	"All videos": "All videos",
-	"Approved videos": "Approved videos",
-
-	"Browse": "Browse",
-	"Videos from subscriptions": "Videos from subscriptions",
-	"Videos": "Videos",
-	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
-	"No uploaded videos.": "No uploaded videos.",
-
-	"Channels": "Channels",
-	"No users.": "No users.",
-
-	"Home": "Home",
-	"From my subscriptions": "From my subscriptions",
-	"Browse subscriptions": "Browse subscriptions",
-	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
-	"Browse videos": "Browse videos",
-	"Hi there, %s": "Hi there, %s",
-	"s": "s",
-	"You have %s subscriber%s.": "You have %s subscriber%s.",
-	"no": "no",
-	"You have %s view%s.": "You have %s view%s.",
-	"Your account was made %s.": "Your account was made %s.",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"News and updates": "News and updates",
-	"After nearly 3 months of development after the reset, squareBracket has now entered beta.": "After nearly 3 months of development after the reset, squareBracket has now entered beta.",
-	"The squareBracket team": "The squareBracket team",
-	"Featured videos": "Featured videos",
-	"No featured videos.": "No featured videos.",
-
-	"Login": "Login",
-	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
-	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
-	"Username": "Username",
-	"Password": "Password",
-	"Back": "Back",
-	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
-
-	"Register": "Register",
-	"E-mail": "E-mail",
-	"Password (Again)": "Password (Again)",
-	"By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.": "By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.",
-
-	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
-	"Submit": "Submit",
-
-	"Search Results for %s": "Search Results for %s",
-	"No search results found.": "No search results found.",
 
 	"Settings": "Settings",
 	"Account": "Account",
@@ -115,7 +99,36 @@
 	"Apply for Checkmark": "Apply for Checkmark",
 	"Made using Google Forms.": "Made using Google Forms.",
 
+	"Search": "Search",
 	"Upload": "Upload",
+	"Login": "Login",
+	"Change theme": "Change theme",
+	"My profile": "My profile",
+	"Sign off": "Sign off",
+	"Light": "Light",
+	"Dark": "Dark",
+	"Bootstrap": "Bootstrap",
+	"Finalium": "Finalium",
+	"Home": "Home",
+	"Users registered": "Users registered",
+	"Videos uploaded": "Videos uploaded",
+	"Terms": "Terms",
+	"Guidelines": "Guidelines",
+	"Contact": "Contact",
+
+	"Admin": "Admin",
+	"All videos": "All videos",
+	"Approved videos": "Approved videos",
+
+	"Uploaded on %s": "Uploaded on %s",
+	"view%s.": "view%s.",
+	"subscriber%s.": "subscriber%s.",
+	"Edit video": "Edit video",
+	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
+	"Please sign in in order to comment.": "Please sign in in order to comment.",
+	"Send": "Send",
+	"Posting...": "Posting...",
+
 	"Important": "Important",
 	"By uploading your videos onto squareBracket, you acknowledge about the warning shown on the right.": "By uploading your videos onto squareBracket, you acknowledge about the warning shown on the right.",
 	"Video info": "Video info",
@@ -128,44 +141,35 @@
 	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
 	"Upload anyways": "Upload anyways",
 
-	"Checkmarked": "Checkmarked",
-	"Your profile settings were successfully updated.": "Your profile settings were successfully updated.",
-	"Uploaded by %s": "Uploaded by %s",
-	"There are no videos uploaded by %s.": "There are no videos uploaded by %s.",
-	"About %s": "About %s",
-	"Last seen": "Last seen",
-	"Joined": "Joined",
-	"subscriber%s.": "subscriber%s.",
-	"Administrator Actions": "Administrator Actions",
-	"Generate password reset for %s": "Generate password reset for %s",
+	"Search Results for %s": "Search Results for %s",
+	"No search results found.": "No search results found.",
 
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Uploaded on %s": "Uploaded on %s",
-	"view%s.": "view%s.",
-	"Edit video": "Edit video",
-	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
-	"Please sign in in order to comment.": "Please sign in in order to comment.",
-	"Send": "Send",
-	"Posting...": "Posting...",
+	"From my subscriptions": "From my subscriptions",
+	"Browse subscriptions": "Browse subscriptions",
+	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+	"Browse videos": "Browse videos",
+	"Hi there, %s": "Hi there, %s",
+	"You have %s subscriber%s.": "You have %s subscriber%s.",
+	"no": "no",
+	"You have %s view%s.": "You have %s view%s.",
+	"Your account was made %s.": "Your account was made %s.",
+	"Welcome to squareBracket": "Welcome to squareBracket",
+	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
+	"News and updates": "News and updates",
+	"After nearly 3 months of development after the reset, squareBracket has now entered beta.": "After nearly 3 months of development after the reset, squareBracket has now entered beta.",
+	"The squareBracket team": "The squareBracket team",
+	"Featured videos": "Featured videos",
+	"No featured videos.": "No featured videos.",
+
+	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
+	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
 
 	"Sorry about that.": "Sorry about that.",
 
-	"Search": "Search",
-	"Change theme": "Change theme",
-	"My profile": "My profile",
-	"Sign off": "Sign off",
-	"Light": "Light",
-	"Dark": "Dark",
-	"Bootstrap": "Bootstrap",
-	"Finalium": "Finalium",
-	"Users registered": "Users registered",
-	"Videos uploaded": "Videos uploaded",
-	"Terms": "Terms",
-	"Guidelines": "Guidelines",
-	"Contact": "Contact",
+	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
+	"Submit": "Submit",
 
-	"Published on %s": "Published on %s",
-
-	"views": "views"
+	"view%s": "view%s"
 
 }
