[Settings] Add display name setting

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -42,6 +42,36 @@
 	"Channels": "Channels",
 	"No users.": "No users.",
 
+	"Settings": "Settings",
+	"Account": "Account",
+	"Security": "Security",
+	"Profile": "Profile",
+	"Checkmark": "Checkmark",
+	"Username:": "Username:",
+	"Account migrated from PokTube": "Account migrated from PokTube",
+	"Email address:": "Email address:",
+	"Profile settings": "Profile settings",
+	"Change the look of your channel's profile.": "Change the look of your channel's profile.",
+	"Profile picture": "Profile picture",
+	"Channel background": "Channel background",
+	"(Checkmark only)": "(Checkmark only)",
+	"Channel description": "Channel description",
+	"Description": "Description",
+	"Channel banner color": "Channel banner color",
+	"Update": "Update",
+	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
+	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
+	"Apply for Checkmark": "Apply for Checkmark",
+	"Made using Google Forms.": "Made using Google Forms.",
+	"Security options": "Security options",
+	"Change Password": "Change Password",
+	"Current Password": "Current Password",
+	"Password": "Password",
+	"Password (Again)": "Password (Again)",
+	"Change": "Change",
+	"Other": "Other",
+	"Log out from all devices": "Log out from all devices",
+
 	"Checkmarked": "Checkmarked",
 	"Your profile settings were successfully updated.": "Your profile settings were successfully updated.",
 	"Uploaded by %s": "Uploaded by %s",
@@ -57,8 +87,6 @@
 	"Register": "Register",
 	"E-mail": "E-mail",
 	"Username": "Username",
-	"Password": "Password",
-	"Password (Again)": "Password (Again)",
 	"Back": "Back",
 	"By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.": "By creating an account, you acknowledge the fact you should at least be 13 years old prior to registering.",
 	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
@@ -74,30 +102,7 @@
 	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
 	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
 
-	"Settings": "Settings",
-	"Account": "Account",
-	"Profile": "Profile",
-	"Checkmark": "Checkmark",
-	"Account migrated from PokTube": "Account migrated from PokTube",
-	"Email address:": "Email address:",
-	"Security options": "Security options",
-	"Change Password": "Change Password",
-	"Current Password": "Current Password",
-	"Change": "Change",
-	"Other": "Other",
-	"Log out from all devices": "Log out from all devices",
-	"Profile settings": "Profile settings",
 	"Change the look and feel of your channel's page.": "Change the look and feel of your channel's page.",
-	"Profile picture": "Profile picture",
-	"Channel background": "Channel background",
-	"(Checkmark only)": "(Checkmark only)",
-	"Channel description": "Channel description",
-	"Description": "Description",
-	"Update": "Update",
-	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
-	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
-	"Apply for Checkmark": "Apply for Checkmark",
-	"Made using Google Forms.": "Made using Google Forms.",
 
 	"Search": "Search",
 	"Upload": "Upload",
@@ -121,8 +126,8 @@
 	"Approved videos": "Approved videos",
 
 	"Uploaded on %s": "Uploaded on %s",
-	"view%s.": "view%s.",
-	"subscriber%s.": "subscriber%s.",
+	"view%s": "view%s",
+	"subscriber%s": "subscriber%s",
 	"Edit video": "Edit video",
 	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
 	"Please sign in in order to comment.": "Please sign in in order to comment.",
@@ -170,6 +175,5 @@
 	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
 	"Submit": "Submit",
 
-	"view%s": "view%s"
-
+	"view%s.": "view%s.",
 }
