[Finalium] Finalium is now default theme

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -124,12 +124,13 @@
 	"Change theme": "Change theme",
 	"My profile": "My profile",
 	"Sign off": "Sign off",
-	"Finalium Light": "Finalium Light",
-	"Finalium Dark": "Finalium Dark",
 	"Light": "Light",
 	"Dark": "Dark",
+	"Classic Light": "Classic Light",
+	"Classic Dark": "Classic Dark",
 	"Bootstrap": "Bootstrap",
 	"Home": "Home",
+	"By the squareBracket contributors": "By the squareBracket contributors",
 	"Users registered": "Users registered",
 	"Videos uploaded": "Videos uploaded",
 	"Terms": "Terms",
