update localization files

--- a/lib/lang/zh-CN.json
+++ b/lib/lang/zh-CN.json
@@ -26,7 +26,7 @@
 	"This video is being processed. Try again later.": "此视频正在处理中，请稍后再试。",
 	"Published on %s": "发布于 %s",
 	"No uploaded videos.": "没有上传的视频。",
-	"views": "观看量",
+	"views": "次观看",
 	"Browse": "浏览",
 	"Channels": "频道",
 	"No users.": "没有用户。",
@@ -50,7 +50,7 @@
 	"squareBracket Checkmark Program": "squareBacket 认证计划",
 	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "在 squareBracket 认证可以得到诸多好处，但这些好处尚未确定。不，这些与金钱或广告无关。",
 	"Apply for Checkmark": "申请认证",
-	"Made using Google Forms.": "使用 Google Forms 制作。",
+	"Made using Google Forms.": "表单使用 Google Forms 制作。",
 	"Security options": "安全选项",
 	"Change Password": "更改密码",
 	"Current Password": "当前密码",
@@ -111,16 +111,16 @@
 	"Users registered": "已注册用户",
 	"Videos uploaded": "已上传视频",
 	"Terms": "使用条款",
-	"Guidelines": "准则",
+	"Guidelines": "社区准则",
 	"Contact": "联系我们",
 	"Admin": "管理员",
 	"All videos": "所有视频",
 	"Approved videos": "已批准的视频",
 	"Uploaded on %s": "上传于 %s",
-	"view%s": "观看量 %s",
+	"view%s": "次观看 %s",
 	"subscriber%s": "订阅者 %s",
 	"Edit video": "编辑视频",
-	"Enter comment here, Markdown can be used here.": "在此输入注释，可以使用 Markdown。",
+	"Enter comment here, Markdown can be used here.": "在此输入评论，可以使用 Markdown。",
 	"Please sign in in order to comment.": "请登录后发表评论。",
 	"Comment": "评论",
 	"Posting...": "发布中...",
@@ -141,8 +141,8 @@
 	"Your profile has been successfully updated.": "您的个人信息更新成功。",
 	"There are currently no videos uploaded by %s.": "没有 %s 上传的视频。",
 	"Administrative Actions": "管理员操作",
-	"From my subscriptions": "来自我订阅的频道。",
-	"Browse subscriptions": "浏览我订阅的频道。",
+	"From my subscriptions": "来自我订阅的频道",
+	"Browse subscriptions": "浏览我订阅的频道发布的视频",
 	"There are currently no videos from your subscriptions.": "您订阅的频道目前没有视频。",
 	"Recently uploaded to squareBracket": "最近上传到 squareBracket 的视频",
 	"Browse videos": "浏览视频",
@@ -162,7 +162,7 @@
 	"No featured videos.": "没有精选视频。",
 	"Password successfully reset! Please login with your new password.": "密码重置成功！请使用您的新密码登录。",
 	"You have been successfully logged out of all devices.": "您已成功从所有设备注销。",
-	"Sorry about that.": "很抱歉。",
+	"Sorry about that.": "我们为此很抱歉。",
 	"Hello %s. Please choose a new secure password, and be sure to remember it!": "您好 %s。请输入一个新的安全密码，并一定要记住它！",
 	"Submit": "提交"
 }
